--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
       <div class="cards">
         <!-- Indicator 1 -->
         <article class="card">
-          <h3>Adaptive Dual MA Trend Ribbon</h3>
+          <h3>Adaptive Dual MA Trend Ribbon (Larsson-Style)</h3>
           <p class="tagline">
-            Dual-moving-average trend ribbon with SMMA/EMA options and ATR-based neutral zones 
-            – inspired by community “Larsson-style” ribbons, but fully open-source.
+            Dual MA ribbon with SMMA/EMA options and ATR neutral zones — an open-source take on the Larsson-style look.
           </p>
           <ul class="pill-list">
             <li>Trend</li>
