--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="logo">Open Indicator Lab</div>
+    <div class="logo"><a href="index.html">Open Indicator Lab</a></div>
     <nav class="nav">
       <a href="#hero">Home</a>
       <a href="#indicators">Indicators</a>
@@ -39,9 +39,9 @@
       <div class="cards">
         <!-- Indicator 1 -->
         <article class="card">
-          <h3>Adaptive Dual MA Trend Ribbon (Larsson-Style)</h3>
+          <h3>Adaptive Trend Ribbon (Larsson-Style)</h3>
           <p class="tagline">
-            Dual MA ribbon with SMMA/EMA options and ATR neutral zones — an open-source take on the Larsson-style look.
+            Dual MA trend ribbon with SMMA/EMA options and ATR neutral zones — an open-source Larsson-style look.
           </p>
           <ul class="pill-list">
             <li>Trend</li>
@@ -49,15 +49,14 @@
             <li>SMMA / EMA</li>
             <li>ATR filter</li>
           </ul>
-          <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">View docs</a>
+          <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Learn more</a>
         </article>
 
         <!-- Indicator 2 -->
         <article class="card">
           <h3>Blended Net Liquidity Correlation</h3>
           <p class="tagline">
-            Customizable net-liquidity model built from FRED data, with multi-window correlation 
-            between liquidity and price.
+            Customizable net-liquidity model built from FRED data, with multi-window correlation between liquidity and price.
           </p>
           <ul class="pill-list">
             <li>Macro</li>
@@ -65,7 +64,7 @@
             <li>FRED data</li>
             <li>Correlation table</li>
           </ul>
-          <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">View docs</a>
+          <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">Learn more</a>
         </article>
       </div>
     </section>
@@ -90,7 +89,7 @@
       <h2>About Open Indicator Lab</h2>
       <p>
         Most trading indicator pages are built to sell you something. Open Indicator Lab is the opposite:
-        it documents useful tools for traders in a clean, neutral, “Investopedia-style” format. 
+        it documents useful tools for traders in a clean, neutral format. 
         The focus is on understanding what an indicator does, when it tends to help, and where it can mislead you.
       </p>
       <p>
