--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Adaptive Dual MA Trend Ribbon – Open Indicator Lab</title>
+  <title>Adaptive Trend Ribbon (Larsson-Style) – Open Indicator Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <div class="logo">Open Indicator Lab</div>
+    <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
     <nav class="nav">
       <a href="../index.html#hero">Home</a>
       <a href="../index.html#indicators">Indicators</a>
@@ -22,14 +22,14 @@
       <a href="../index.html#indicators" class="btn-secondary">← Back to all indicators</a>
     </p>
 
-    <h1>Adaptive Dual MA Trend Ribbon</h1>
+    <h1>Adaptive Trend Ribbon (Larsson-Style)</h1>
     <p class="section-intro">
       Dual-moving-average “trend ribbon” for TradingView that lets you experiment with SMMA/EMA/SMA/WMA 
       pairs and ATR-based neutral zones, inspired by community Larsson-style ribbons but fully open-source.
     </p>
 
     <div class="doc-actions">
-      <a href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/" 
+      <a href="https://www.tradingview.com/script/gpEGdOcF-Adaptive-Dual-MA-Trend-Ribbon-Community-Larsson-Style-Presets/"
          target="_blank" rel="noopener" class="btn-primary">
         Open on TradingView
       </a>
@@ -46,6 +46,8 @@
       This script does <strong>not</strong> replicate, reverse-engineer, or replace any closed-source indicator. 
       Instead, it provides a flexible, open-source framework that lets traders build their own 
       trend-ribbon configuration inspired by similar visual concepts while maintaining full transparency.
+      Because the calculations rely only on standard moving-average and ATR methods, you can experiment 
+      freely with community-discussed presets without relying on proprietary tools.
     </p>
 
     <h2>What the Script Does</h2>
@@ -80,7 +82,7 @@
       context filter to sit alongside their existing entry and risk rules.
     </p>
 
-    <h2>Popular Community MA Combinations</h2>
+    <h2>Popular MA Combinations</h2>
     <ul>
       <li><strong>SMMA 15 / 29</strong> – smoother structural trend flow.</li>
       <li><strong>EMA 30 / 60</strong> – more responsive momentum shifts.</li>
@@ -94,7 +96,7 @@
 
     <h2>How to Use</h2>
     <ol>
-      <li>Choose your preferred MA type and lengths based on timeframe.</li>
+      <li>Choose your preferred MA type and lengths based on your timeframe.</li>
       <li>Enable the ATR Neutral Zone if you want fewer noisy flips.</li>
       <li>Optionally color bars by trend for faster visual reads.</li>
       <li>Combine with structure (support/resistance), volume, and your own entry triggers.</li>
@@ -115,7 +117,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Open Indicator Lab – Adaptive Dual MA Trend Ribbon Docs</p>
+    <p>© <span id="year"></span> Open Indicator Lab – Adaptive Trend Ribbon Docs</p>
   </footer>
 
   <script>
