--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="logo"><a href="index.html">Open Indicator Lab</a></div>
+    <div class="logo">
+      <a href="index.html">Open Indicator Lab</a>
+    </div>
     <nav class="nav">
       <a href="#hero">Home</a>
       <a href="#indicators">Indicators</a>
-      <a href="#guides">Guides</a>
       <a href="#about">About</a>
     </nav>
   </header>
@@ -23,7 +24,7 @@
       <p>
         A quiet corner of the internet for traders who prefer clear logic over paywalls. 
         Every indicator here comes with plain-English documentation, transparent inputs, 
-        and links to the original open-source scripts on TradingView.
+        and a direct link to the original open-source script on TradingView.
       </p>
       <a href="#indicators" class="btn-primary">Browse indicators</a>
     </div>
@@ -69,32 +70,18 @@
       </div>
     </section>
 
-    <!-- GUIDES -->
-    <section id="guides" class="section">
-      <h2>Guides & Concepts</h2>
-      <p class="section-intro">
-        This section will grow over time with practical guides: how to think about trend, liquidity, 
-        and indicator design without turning everything into a sales pitch.
-      </p>
-      <ul class="guide-list">
-        <li>• Dual moving-average ribbons vs. single MAs</li>
-        <li>• Using higher-timeframe trend as a filter</li>
-        <li>• Why ATR-based neutral zones reduce chop</li>
-        <li>• How liquidity models can complement price action</li>
-      </ul>
-    </section>
-
     <!-- ABOUT -->
     <section id="about" class="section">
       <h2>About Open Indicator Lab</h2>
       <p>
         Most trading indicator pages are built to sell you something. Open Indicator Lab is the opposite:
-        it documents useful tools for traders in a clean, neutral format. 
-        The focus is on understanding what an indicator does, when it tends to help, and where it can mislead you.
+        it documents useful tools for traders in a clean, neutral format. The goal is to explain 
+        what an indicator actually does, when it tends to help, and where it can mislead you.
       </p>
       <p>
         All tools here are open-source or transparently documented. Nothing on this site is financial advice, 
-        a signal service, or a promise of performance.
+        a signal service, or a guarantee of performance. Use these indicators as building blocks inside your own 
+        framework, alongside risk management and your preferred approach to price action.
       </p>
     </section>
   </main>
