--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -12,7 +12,6 @@
     <nav class="nav">
       <a href="../index.html#hero">Home</a>
       <a href="../index.html#indicators">Indicators</a>
-      <a href="../index.html#guides">Guides</a>
       <a href="../index.html#about">About</a>
     </nav>
   </header>
@@ -62,7 +61,7 @@
 
     <h3>2. Runs multi-period price correlations</h3>
     <ul>
-      <li>30D, 60D, 90D, 180D, 1Y, 1.5Y, 2Y, and a custom length window.</li>
+      <li>30D, 60D, 90D, 180D, 1Y, 1.5Y, 2Y, and a custom-length window.</li>
       <li>Displays all correlations in a compact table.</li>
       <li>Automatically highlights the highest-correlation window.</li>
     </ul>
