--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <title>Open Indicator Lab – Free Trading Indicator Docs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Investopedia-style body font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -23,8 +27,8 @@
       <h1>Open, Transparent Trading Indicators</h1>
       <p>
         A quiet corner of the internet for traders who prefer clear logic over paywalls. 
-        Every indicator here comes with plain-English documentation, transparent inputs, 
-        and a direct link to the original open-source script on TradingView.
+        Every indicator here is free to use on TradingView and comes with plain-English documentation, 
+        transparent inputs, and a direct link to the official script page.
       </p>
       <a href="#indicators" class="btn-primary">Browse indicators</a>
     </div>
@@ -42,7 +46,7 @@
         <article class="card">
           <h3>Adaptive Trend Ribbon (Larsson-Style)</h3>
           <p class="tagline">
-            Dual MA trend ribbon with SMMA/EMA options and ATR neutral zones — an open-source Larsson-style look.
+            Dual MA trend ribbon with SMMA/EMA options and ATR neutral zones — a free Larsson-style ribbon for TradingView.
           </p>
           <ul class="pill-list">
             <li>Trend</li>
@@ -74,20 +78,27 @@
     <section id="about" class="section">
       <h2>About Open Indicator Lab</h2>
       <p>
-        Most trading indicator pages are built to sell you something. Open Indicator Lab is the opposite:
-        it documents useful tools for traders in a clean, neutral format. The goal is to explain 
-        what an indicator actually does, when it tends to help, and where it can mislead you.
+        Most trading indicator pages are built to sell you something or hide the logic behind buzzwords. 
+        Open Indicator Lab is the opposite: it documents useful tools for traders in a clean, neutral format, 
+        with a focus on clarity instead of hype.
       </p>
       <p>
-        All tools here are open-source or transparently documented. Nothing on this site is financial advice, 
-        a signal service, or a guarantee of performance. Use these indicators as building blocks inside your own 
-        framework, alongside risk management and your preferred approach to price action.
+        The goal is to explain what an indicator actually does, where it tends to help, and where it can mislead you — 
+        so you can decide whether it belongs in <em>your</em> process. Part of that is giving traders free, well-documented 
+        alternatives to expensive “secret sauce” indicators that often boil down to transparent math or standard data.
+      </p>
+      <p>
+        Indicators here are free to use on TradingView. Many of them are published as protected scripts 
+        (the code itself isn’t exposed), but inputs, behavior, and use-cases are documented as openly as possible. 
+        Nothing on this site is financial advice, a signal service, or a guarantee of performance.
       </p>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Open Indicator Lab – Free Trading Indicator Documentation</p>
+    <p>
+      © <span id="year"></span> Open Indicator Lab – free TradingView indicators, minus the sales pitch.
+    </p>
   </footer>
 
   <script>
